<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/nav_online">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/online">
                <item
                    android:id="@+id/nav_browse"
                    android:icon="@drawable/ic_public_black_24dp"
                    android:title="@string/nav_browse" />
            </group>
        </menu>
    </item>
    <item
        android:title="@string/nav_saved">
        <menu>
            <group android:checkableBehavior="single"
                android:id="@+id/saved">
                <item
                    android:id="@+id/nav_saved_all"
                    android:icon="@drawable/ic_folder_black_24dp"
                    android:title="@string/nav_all" />
                <item
                    android:id="@+id/nav_starred"
                    android:icon="@drawable/ic_star_black_24dp"
                    android:title="@string/nav_starred" />
                <item
                    android:id="@+id/nav_synced"
                    android:icon="@drawable/ic_cloud_done_black_24dp"
                    android:title="@string/nav_synced" />
            </group>
        </menu>
    </item>
    <group android:checkableBehavior="single"
        android:id="@+id/settings">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>

</menu>
