<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:key="sync_settings"
        android:title="@string/pref_auto_sync">
        <SwitchPreference
            android:key="sync_toggle"
            android:title="Automatically sync threads" />
        <SwitchPreference
            android:key="data_toggle"
            android:title="Use mobile data" />
        <EditTextPreference
            android:key="pref_time"
            android:title="Sync time"
            android:inputType="number"
            android:summary="18:30" />
        <EditTextPreference
            android:key="pref_size_limit"
            android:title="Storage limit"
            android:inputType="number"
            android:summary="2 GB" />
        <EditTextPreference
            android:key="pref_prune"
            android:title="Auto-prune threads older than"
            android:inputType="number"
            android:summary="8 days" />
        <EditTextPreference
            android:key="pref_limit"
            android:title="Threads to sync per subreddit"
            android:inputType="number"
            android:summary="100" />
    </PreferenceScreen>
    <PreferenceScreen
        android:title="@string/pref_manage_subreddits">
    </PreferenceScreen>
    <Preference
        android:title="@string/pref_reset_data" />
    <PreferenceCategory
        android:title="Sorting">
        <ListPreference
            android:key="pref_comment_sort"
            android:title="@string/pref_comment_sort"
            android:entries="@array/comment_sort_order"
            android:entryValues="@array/comment_sort_order_values" />
        <ListPreference
            android:key="pref_thread_sort"
            android:title="@string/pref_thread_sort"
            android:entries="@array/threads_sort_order"
            android:entryValues="@array/threads_sort_order_values" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_cat_display">
        <ListPreference
            android:key="pref_font_size"
            android:title="@string/pref_font_size"
            android:entries="@array/font_sizes"
            android:entryValues="@array/font_size_values" />
        <ListPreference
            android:key="pref_theme"
            android:title="@string/pref_theme"
            android:entries="@array/font_sizes"
            android:entryValues="@array/font_size_values" />
    </PreferenceCategory>
    <ListPreference
        android:key="pref_language"
        android:title="@string/pref_language"
        android:entries="@array/language_names"
        android:entryValues="@array/language_values" />
</PreferenceScreen>